@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//field[@name='lines']" position="replace_attributes">
+        <field name="lines" invisible="1"/>
+    </xpath>
+</data>
